--- a/smileyrating/src/main/res/values/attrs.xml
+++ b/smileyrating/src/main/res/values/attrs.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <declare-styleable name="SmileyRatingView">
         <attr name="face_color" format="color"/>
+        <attr name="face_color_red" format="color"/>
         <attr name="eyes_color" format="color"/>
         <attr name="tongue_color" format="color"/>
         <attr name="mouth_color" format="color"/>
